[tool.poetry]
name = "todomaster"
version = "0.1.0"
description = ""
authors = ["winter_x64 <75623356+winter-x64@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
